JWT token +JwtBearer + Cookies

--- a/AuthWebApi/appsettings.json
+++ b/AuthWebApi/appsettings.json
@@ -5,5 +5,11 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=C:\\Users\\vova\\Documents\\TestDB.mdf;Integrated Security=True;Connect Timeout=30"
+  },
   "AllowedHosts": "*"
+  
+
 }
