--- a/AuthWebApi/appsettings.json
+++ b/AuthWebApi/appsettings.json
@@ -9,7 +9,12 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=C:\\Users\\vova\\Documents\\TestDB.mdf;Integrated Security=True;Connect Timeout=30"
   },
-  "AllowedHosts": "*"
-  
+  "AllowedHosts": "*",
+  "AuthSettings": {
+    "SecretKey": "MySecretKeyUPDATE!THIS!KaY5674382910",
+    "Expires": "00:12:00"
+
+  }
+
 
 }
